--- a/Index.html
+++ b/Index.html
@@ -1,24 +1,27 @@
-<!DOCTYPE>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <title>Auction</title>
-    <link type="text/css" src="style.css" />
-    <script type="text/javascript" src="index.js"></script>
-    <style>
-    </style>
-    <script>
-    </script>
-    
+    <link rel="stylesheet" href="style.css" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-<table align="center" border="1" width="600">
-    <thead>
-        <td>Title</td>
-        <td>Name</td>
-    </thead>
-    <tr>
-        <td>hello</td>
-    </tr>
-</table>
+
+<!--Bootstrap-->
+<div class="container">
+    <div class="row">
+        <div class="col-6">one</div>
+        <div class="col-6">two</div>
+    </div>
+</div>
+
+<!--First look-->
+<!--    <div id="header"></div>-->
+<!--    <div class="row"></div>-->
+<!--    <div id="footer"></div>-->
 </body>
 </html>
